@@ -428,6 +428,9 @@
    <id>printer/HP-Color_LaserJet_4600</id>
   </printer>
   <printer>
+   <id>printer/HP-Color_LaserJet_4610</id>
+  </printer>
+  <printer>
    <id>printer/HP-Color_LaserJet_4650</id>
   </printer>
     <printer>
@@ -548,6 +551,9 @@
    <id>printer/HP-LaserJet_4200</id>
   </printer>
   <printer>
+   <id>printer/HP-LaserJet_4240</id>
+  </printer>
+  <printer>
    <id>printer/HP-LaserJet_4250</id>
   </printer>
   <printer>
@@ -594,6 +600,9 @@
   </printer>
   <printer>
    <id>printer/HP-LaserJet_9000_MFP</id>
+  </printer>
+  <printer>
+   <id>printer/HP-LaserJet_9040</id>
   </printer>
   <printer>
    <id>printer/HP-LaserJet_9040_MFP</id>
