@@ -1,3 +1,10 @@
+2005-04-01 Jacqueline Pitter <jacqueline.pitter@hp.com>
+	* printer/HP-LaserJet_1022.xml,
+	  printer/HP-LaserJet_4240.xml,
+	  printer/HP-LaserJet_9040.xml,
+	  printer/HP-Color_LaserJet_4610.xml,
+	  printer/HP-Business_Inkjet_1000.xml: added new support
+
 2005-03-30  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Lexmark-Optra_E321.xml, driver/ljet4.xml,
